# ImGuiStarter

./: .gitignore  .gitmodules  CMakeLists.txt
libs/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt
src/core/: actions.h  context.cpp  context.h  pane.h  window.cpp  window.h
src/helpers/: events.h  fs.h  logger.h  registry.cpp  texture.cpp  texture.h
src/renderer/: metal.h  metal.mm  opengl.cpp  opengl.h  renderer.cpp  renderer.h
